# NonVirtual

./: .gitignore  CMakeLists.txt  README.md
include/: non_virtual.h  virtual.h
src/: main.cpp
